<resources>
    <string name="app_name">Stundenplan_Tabbed</string>

    <!-- Input Fragment -->
    <string name="button_input">Fach hinzufügen</string>
    <string name="input_semester">Semester</string>
    <string name="input_name">Name</string>
    <string name="input_tag">Tag</string>
    <string name="input_beginn">Beginn</string>
    <string name="input_ende">Ende</string>
    <string name="input_raum">Raum</string>
    <string name="input_dozent">Dozent</string>
    <string name="input_kuerzel">Kuerzel</string>

    <string-array name="tage_array">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </string-array>

    <string name="tag_prompt">Choose a country</string>


</resources>
