<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fhbielefeld.swe.stundenplan_tabbed.InputFragment">

    <EditText
        android:id="@+id/input_semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_semester" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_semester"
        android:layout_alignRight="@+id/input_semester"
        android:layout_below="@+id/input_semester"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_name" />

    <Spinner
        android:id="@+id/input_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_name"
        android:ems="10"
        android:entries="@array/tage_array"
        android:prompt="@string/tag_prompt" />

    <EditText
        android:id="@+id/input_beginn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_tag"
        android:layout_alignRight="@+id/input_tag"
        android:layout_below="@+id/input_tag"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_beginn" />

    <EditText
        android:id="@+id/input_ende"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_beginn"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_ende" />

    <EditText
        android:id="@+id/input_raum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_ende"
        android:layout_alignRight="@+id/input_ende"
        android:layout_below="@+id/input_ende"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_raum" />

    <EditText
        android:id="@+id/input_dozent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_raum"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_dozent" />

    <EditText
        android:id="@+id/input_kuerzel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_dozent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_kuerzel" />

    <Button
        android:id="@+id/button_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_input" />


</RelativeLayout>
